# fractal

./: .gitattributes  .gitignore  .gitlab-ci.yml  .typos.toml  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  deny.toml  fractal.doap  meson.build  meson.options  meson_options.txt
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml  style-hc.scss  style.css  style.scss
data/resources/stylesheet/: _common.scss  _components.scss  _config.scss  _login.scss  _room_details.scss  _room_history.scss  _session_view.scss  _vendor.scss
src/: application.rs  blp-resources.gresource.xml.in  blp-resources.in  config.rs.in  error_page.blp  error_page.rs  error_page.ui  greeter.rs  greeter.ui  intent.rs  main.rs  meson.build  prelude.rs  secret.rs  shortcuts-dialog.blp  shortcuts.ui  system_settings.rs  ui-blueprint-resources.in  ui-resources.gresource.xml  ui-resources.gresource.xml.in  user_facing_error.rs  window.blp  window.rs  window.ui
src/account_chooser_dialog/: account_row.blp  account_row.rs  account_row.ui  mod.rs  mod.ui
src/account_settings/: mod.rs  notifications_page.blp  notifications_page.rs
src/account_settings/encryption_page/: import_export_keys_subpage.rs  mod.rs
src/account_settings/general_page/: change_password_subpage.rs  deactivate_account_subpage.rs  log_out_subpage.rs  mod.rs
src/account_settings/safety_page/: mod.rs
src/account_settings/user_session/: user_session_list_subpage.rs  user_session_row.blp  user_session_row.rs  user_session_subpage.rs
src/account_switcher/: account_switcher_button.blp  account_switcher_button.rs  account_switcher_button.ui  account_switcher_popover.blp  account_switcher_popover.rs  account_switcher_popover.ui  avatar_with_selection.blp  avatar_with_selection.rs  avatar_with_selection.ui  mod.rs  mod.ui  session_item.blp  session_item.rs  session_item.ui
src/components/: action_button.blp  action_button.rs  action_button.ui  audio_player.rs  auth_dialog.rs  auth_dialog.ui  avatar.rs  badge.rs  button_row.rs  check_loading_row.rs  check_loading_row.ui  combo_loading_row.rs  context_menu_bin.rs  context_menu_bin.ui  copyable_row.rs  copyable_row.ui  crop_circle.rs  drag_overlay.rs  editable_avatar.rs  editable_avatar.ui  entry_add_row.rs  image_paintable.rs  join_room_dialog.rs  join_room_dialog.ui  label_with_widgets.rs  loading_bin.rs  loading_bin.ui  loading_row.rs  loading_row.ui  location_viewer.rs  media_content_viewer.rs  media_content_viewer.ui  mod.rs  offline_banner.rs  overlapping_avatars.rs  pill.rs  pill.ui  pill_source_row.rs  pill_source_row.ui  power_level_badge.rs  (+25 more)
src/components/avatar/: crop_circle.rs  data.rs  editable.blp  editable.rs  editable.ui  image.rs  mod.rs  mod.ui  overlapping.rs
src/components/camera/: mod.rs  qrcode_scanner.rs  qrcode_scanner.ui  viewfinder.rs
src/components/crypto/: identity_setup_view.blp  identity_setup_view.rs  identity_setup_view.ui  recovery_setup_view.blp  recovery_setup_view.rs  recovery_setup_view.ui
src/components/dialogs/: auth.rs  auth.ui  join_room.rs  join_room.ui  message_dialogs.rs  mod.rs  room_preview.blp  room_preview.rs  room_preview.ui  toastable.rs  toastable.ui  user_profile.rs  user_profile.ui
src/components/loading/: bin.rs  bin.ui  button.rs  mod.rs  spinner.rs
src/components/media/: animated_image_paintable.rs  audio_player.blp  audio_player.rs  audio_player.ui  content_viewer.rs  content_viewer.ui  image_paintable.rs  location_viewer.blp  location_viewer.rs  location_viewer.ui  mod.rs  video_player.blp  video_player.rs  video_player.ui  video_player_renderer.rs
src/components/pill/: at_room.rs  mod.rs  mod.ui  search_entry.rs  search_entry.ui  source.rs  source_row.rs  source_row.ui
src/components/power_level_selection/: combo_box.rs  combo_box.ui  popover.blp  popover.rs  popover.ui  row.blp  row.rs  row.ui
src/components/rows/: button_count_row.rs  button_count_row.ui  button_row.rs  button_row.ui  check_loading_row.rs  copyable_row.rs  (+21 more)
src/contrib/: mod.rs  qr_code.rs
src/identity_verification_view/: accept_request_page.blp  accept_request_page.rs  accept_request_page.ui  cancelled_page.blp  cancelled_page.rs  cancelled_page.ui  choose_method_page.blp  choose_method_page.rs  choose_method_page.ui  completed_page.blp  completed_page.rs  completed_page.ui  confirm_qr_code_page.blp  confirm_qr_code_page.rs  confirm_qr_code_page.ui  mod.rs  mod.ui  no_supported_methods_page.blp  no_supported_methods_page.rs  no_supported_methods_page.ui  qr_code_scanned_page.blp  qr_code_scanned_page.rs  qr_code_scanned_page.ui  room_left_page.blp  room_left_page.rs  room_left_page.ui  sas_emoji.blp  sas_emoji.rs  sas_page.blp  sas_page.rs  sas_page.ui  scan_qr_code_page.blp  scan_qr_code_page.rs  scan_qr_code_page.ui  wait_for_other_page.blp  wait_for_other_page.rs  wait_for_other_page.ui
src/login/: advanced_dialog.blp  advanced_dialog.rs  advanced_dialog.ui  greeter.blp  greeter.rs  greeter.ui  homeserver_page.blp  homeserver_page.rs  homeserver_page.ui  idp_button.rs  in_browser_page.blp  in_browser_page.rs  in_browser_page.ui  method_page.blp  method_page.rs  method_page.ui  mod.blp  mod.rs  mod.ui  session_setup_view.rs  session_setup_view.ui  sso_idp_button.blp  sso_idp_button.rs  sso_idp_button.ui  sso_page.rs  sso_page.ui
src/secret/: file.rs  linux.rs  mod.rs  unimplemented.rs
src/session_list/: failed_session.rs  mod.rs  new_session.rs  session_info.rs  session_list_settings.rs
src/session_setup_view/: mod.rs  mod.ui
src/session_view/: content.rs  create_room_dialog.rs  media_viewer.rs  mod.rs
src/system_settings/: linux.rs  mod.rs
src/utils/: dummy_object.rs  expression.rs  expression_list_model.rs  fixed_selection.rs  key_bindings.rs  macros.rs  matrix.rs  media.rs  message_dialog.rs  mod.rs  notifications.rs  oauth.rs  oidc.rs  room_spell_checker.rs  single_item_list_model.rs  sourceview.rs  string.rs  template_callbacks.rs  toast.rs
src/verification_view/: identity_verification_view.rs  identity_verification_view.ui  mod.rs  session_verification_view.rs  session_verification_view.ui
(+621 files in other folders)
