option(
  'profile',
  type: 'combo',
  choices: [
    'default',
    'beta',
    'development',
    'hack',
  ],
  value: 'default',
  description: 'The build profile for Fractal. One of "default", "beta", "development" or "hack".'
)
option(
  'sandboxed-build',
  type : 'boolean',
  value : false,
  description: 'Whether the build happens in a sandbox.' +
               'When that is the case, cargo will not be able to download the dependencies during' +
               'the build so they are assumed to be in `{meson.project_source_root()}/cargo`.'
)
option(
  'disable-glycin-sandbox',
  type : 'boolean',
  value : false,
  description: 'Whether the sandbox of glycin should be disabled.' +
               'This is only useful during development.'
)
